--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,28 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
+
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/cover/">
   </head>
 
-  <body>
-    <%= render 'shared/navbar' %>
+  <body class="vh-100">
     <%= render 'shared/flashes' %>
+    <%= render 'shared/navbar' %>
+
 
     <%= yield %>
   </body>
+
+  <%# <div class="footer">
+  <div class="footer-links">
+    <a href="#"><i class="fab fa-github"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-linkedin"></i></a>
+  </div>
+  <div class="footer-copyright">
+    This footer is made with <i class="fas fa-heart"></i> at Le Wagon
+  </div> %>
+</div>
 </html>
