--- a/app/views/assets/show.html.erb
+++ b/app/views/assets/show.html.erb
@@ -1,20 +1,60 @@
-<div class="container">
-  <div class="boat-image-cards d-flex mt-3">
-    <img src="https://www.theluxurybali.com/wp-content/uploads/2015/06/SIL_1f-848x530.jpg" alt="">
-    </div>
-    <div class="product-desription-form d-flex">
-      <div class="product-description">
-        <h1><%= @asset.name %></h1>
-        <h2><em><%= @asset.game%></em></h2>
-        <p><%= @asset.description %></p>
-      </div>
-      <div class="product-form">
-      <p style="color: grey"><%= @asset.price %> IDR /per day</p>
-      <%# <%= simple_form_for([@asset, @booking]) do |f| %>
-        <%# <%= f.input :start_date, html5: true, class: 'form-control' %>
-        <%# <%= f.input :end_date, html5: true, cslass: 'form-control'   %>
-        <%# <%= f.submit class: 'booking-button btn btn-dark' %>
-      <%# <% end %>
-     </div>
-    </div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Shop Item - Start Bootstrap Template</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- Bootstrap icons-->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body>
+        <!-- Navigation-->
+        <%# <nav class="d-flex h-200 text-center text-white bg-dark">
+            <div class="container px-4 px-lg-5">
+              <h3 class="float-md-start mb-0">Cover</h3>
+              <nav class="nav nav-masthead justify-content-center float-md-end">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" href="#">Dash</a>
+                <a class="nav-link" href="#">Contact</a>
+              </nav>
+            </div>
+        </nav> %>
+        <!-- Product section-->
+        <section class="py-5">
+            <div class="container px-4 px-lg-5 my-5">
+                <div class="row gx-4 gx-lg-5 align-items-center">
+                    <div class="col-md-6"><img class="card-img-top mb-5 mb-md-0" src="https://dummyimage.com/600x700/dee2e6/6c757d.jpg" alt="..." /></div>
+                    <div class="col-md-6">
+                        <div class="small mb-1">SKU: BST-498</div>
+                        <h1 class="display-5 fw-bolder">Shop item template</h1>
+                        <div class="fs-5 mb-5">
+                            <span class="text-decoration-line-through">$45.00</span>
+                            <span>$40.00</span>
+                        </div>
+                        <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium at dolorem quidem modi. Nam sequi consequatur obcaecati excepturi alias magni, accusamus eius blanditiis delectus ipsam minima ea iste laborum vero?</p>
+                        <div class="d-flex">
+                            <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
+                            <button class="btn btn-outline-dark flex-shrink-0" type="button">
+                                <i class="bi-cart-fill me-1"></i>
+                                Add to cart
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Related items section-->
+               <!-- Footer-->
+
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
+</html>
